--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <header>
         <nav class="navbar navbar-expand-lg bg-light p-lg-3 ">
             <div class="container">
-              <a class="navbar-brand" href="#">
+              <a class="navbar-brand" href="index.html">
                 <div class="icon ">
 
                     <i class="fa-sharp fa-solid fa-cart-shopping"></i>
@@ -36,9 +36,20 @@
                   <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="#">Home</a>
                   </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Pages</a>
+                  <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      Pages
+                    </a>
+                    <ul class="dropdown-menu">
+                      <li><a class="dropdown-item" href="about.html">About Us</a></li>
+                      <li><a class="dropdown-item" href="Contact.html">Contact us</a></li>
+                      <li><a class="dropdown-item" href="Faq.html">Faq</a></li>
+                      <li><a class="dropdown-item" href="404.html">404 Error Page</a></li>
+                      <li><a class="dropdown-item" href="login.html">Login</a></li>
+
+                    </ul>
                   </li>
+                  
                   <li class="nav-item">
                     <a class="nav-link" href="#">products</a>
                   </li>
@@ -168,7 +179,7 @@
           <div class="card" style="width: 18rem;">
             <img src="imgs/product_img1.jpg" class="card-img-top img-fluid" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Blue Dress For Woman</h5>
+              <h5 class="card-title"><a href="Product/Product01.html">Blue Dress For Woman</a></h5>
               <p class="card-text">$45.00 <span>$55.25</span> 35% off</p>
 
               <div class="icons d-flex">
@@ -196,7 +207,7 @@
           <div class="card" style="width: 18rem;">
             <img src="imgs/product_img2.jpg" class="card-img-top img-fluid" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Lether Gray Tuxedo</h5>
+              <h5 class="card-title"><a href="Product/Product02.html">Lether Gray Tuxedo</a></h5>
               <p class="card-text">$55.00 <span>$95.25</span> 25% off</p>
 
               <div class="icons d-flex">
@@ -223,7 +234,7 @@
           <div class="card" style="width: 18rem;">
             <img src="imgs/product_img3.jpg" class="card-img-top img-fluid" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Woman Full Sliv Dress</h5>
+              <h5 class="card-title"><a href="/Product/Product03.html">Woman Full Sliv Dress</a></h5>
               <p class="card-text">$68.00 <span>$99.00</span> </p>
 
               <div class="icons d-flex">
@@ -250,7 +261,7 @@
           <div class="card" style="width: 18rem;">
             <img src="imgs/product_img4.jpg" class="card-img-top img-fluid" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Light Blue Shirt</h5>
+              <h5 class="card-title"><a href="/Product/Product04.html">Light Blue Shirt</a></h5>
               <p class="card-text">$69.00.00 <span>$89.00</span> 20% off</p>
 
               <div class="icons d-flex">
@@ -277,7 +288,7 @@
           <div class="card" style="width: 18rem;">
             <img src="imgs/product_img5.jpg" class="card-img-top img-fluid" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Blue Dress For Woman</h5>
+              <h5 class="card-title"><a href="/Product/Product05.html">Blue Dress For Woman</a></h5>
               <p class="card-text">$45.00 <span>$55.25</span> 35% off</p>
 
               <div class="icons d-flex">
@@ -305,7 +316,7 @@
           <div class="card" style="width: 18rem;">
             <img src="imgs/product_img6.jpg" class="card-img-top img-fluid" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Lether Gray Tuxedo</h5>
+              <h5 class="card-title"><a href="/Product/Product06.html">Lether Gray Tuxedo</a></h5>
               <p class="card-text">$55.00 <span>$95.25</span> 25% off</p>
 
               <div class="icons d-flex">
@@ -332,7 +343,7 @@
           <div class="card" style="width: 18rem;">
             <img src="imgs/product_img7.jpg" class="card-img-top img-fluid" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Woman Full Sliv Dress</h5>
+              <h5 class="card-title"><a href="/Product/Product07.html">Woman Full Sliv Dress</a></h5>
               <p class="card-text">$68.00 <span>$99.00</span> 20% off </p>
 
               <div class="icons d-flex">
@@ -359,7 +370,7 @@
           <div class="card" style="width: 18rem;">
             <img src="imgs/product_img8.jpg" class="card-img-top img-fluid" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Light Blue Shirt</h5>
+              <h5 class="card-title"><a href="/Product/Product08.html">Light Blue Shirt</a></h5>
               <p class="card-text">$69.00.00 <span>$89.00</span> 20% off</p>
 
               <div class="icons d-flex">
@@ -429,7 +440,7 @@
           <div class="card" style="width: 18rem;">
             <img src="imgs/product_img1.jpg" class="card-img-top img-fluid" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Blue Dress For Woman</h5>
+              <h5 class="card-title"><a href="/Product/Product01.html">Blue Dress For Woman</a></h5>
               <p class="card-text">$45.00 <span>$55.25</span> 35% off</p>
 
               <div class="icons d-flex">
@@ -457,7 +468,7 @@
           <div class="card" style="width: 18rem;">
             <img src="imgs/product_img2.jpg" class="card-img-top img-fluid" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Lether Gray Tuxedo</h5>
+              <h5 class="card-title"><a href="/Product/Product02.html">Lether Gray Tuxedo</a></h5>
               <p class="card-text">$55.00 <span>$95.25</span> 25% off</p>
 
               <div class="icons d-flex">
@@ -484,7 +495,7 @@
           <div class="card" style="width: 18rem;">
             <img src="imgs/product_img3.jpg" class="card-img-top img-fluid" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Woman Full Sliv Dress</h5>
+              <h5 class="card-title"><a href="/Product/Product03.html">Woman Full Sliv Dress</a></h5>
               <p class="card-text">$68.00 <span>$99.00</span> </p>
 
               <div class="icons d-flex">
@@ -511,7 +522,7 @@
           <div class="card" style="width: 18rem;">
             <img src="imgs/product_img4.jpg" class="card-img-top img-fluid" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Light Blue Shirt</h5>
+              <h5 class="card-title"><a href="/Product/Product04.html">Light Blue Shirt</a></h5>
               <p class="card-text">$69.00.00 <span>$89.00</span> 20% off</p>
 
               <div class="icons d-flex">
